# ibmdiagrams

./: .CHANGELOG.md.swp  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  MANIFEST.in  README.md  SECURITY.md  STARTER_TEAM.md  innersource.yaml  llms.txt  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: -add_custom_template-.md  bug_report.md  feature_request.md  good-first-issue.md  update-documentation.md  update-pattern.md
.github/workflows/: ci.yml
docs/: benefits.md  checklist-json.md  checklist-terraform.md  diagram-as-code.md  features.md  json.md  mcp-onboarding.md  mcp.md  python.md  releases.md  setup.md  terraform.md  testing.md
docs/examples/: README.md  slzpowervs.md  slzpowervs.py  slzvsi.md  slzvsi.py
docs/examples/json/: README.md  cloud.json
docs/examples/python/: cloud.py  simple-vpc.md  simple-vpc.py  slzpowervs.md  slzvsi.md  slzvsi.py  xml-string-output.md  xml-string-output.py
docs/examples/terraform/: cloud.tfstate  slzvsi.md  slzvsi.tfstate  terraform-custom-labels.md  terraform-general-labels.md  terraform-to-python.md
skills/ibmdiagrams-builder/: README.md  SKILL.md
src/: epnode.py
src/ibmdiagrams/: __init__.py
src/ibmdiagrams.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ibmdiagrams/ibmbase/: __init__.py  build.py  catalogicons.py  colors.py  common.py  compose.py  composejson.py  constants.py  elements.py  icons.py  load.py  loadjson.py  messages.py  opsjson.py  options.py  properties.py  resources.py  rias.py  shapes.py  staticicons.py  terraform.py  types.py
src/ibmdiagrams/ibmcloud/: __init__.py  actors.py  ai.py  applications.py  colors.py  compute.py  connectors.py  containers.py  data.py  devops.py  diagram.py  groups.py  network.py  observability.py  security.py  storage.py
src/ibmdiagrams/ibmscripts/: ibmdiagrams.py  mcp.py
src/ibmdiagrams/ibmshapes/: __init__.py  collapsed.py  connectors.py  diagram.py  expanded.py  grouping.py
src/ibmdiagrams/ibmutils/: __init__.py  banner.py
tests/: conftest.py  test_complete_diagrams.py  test_layout_group.py  test_options_common.py  test_release_stabilization.py  test_visual_regression.py
tests/utils/: __init__.py  baseline_elements.py  baseline_utils.py  image_comparison.py
