[project]
name = "ibmdiagrams"
version = "3.3.2"
description = "Generate architecture diagrams following IBM Diagram Standard"
readme = "README.md"
requires-python = ">=3.11.0"
license = "Apache-2.0"
keywords = ["cloud", "diagrams", "ibm"]
authors = [
  { name = "John Pape", email = "jtpape@us.ibm.com" },
  { name = "Kai Wedekind", email = "kai.wedekind@de.ibm.com" },
  { name = "Jay Warfield (left IBM)", email = "jay.warfield@us.ibm.com" },
]
maintainers = [
  { name = "John Pape", email = "jtpape@us.ibm.com" },
  { name = "Kai Wedekind", email = "kai.wedekind@de.ibm.com" },
]
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
  'pandas>=1.4.2',
  'PyYAML>=6.0',
  'requests>=2.31.0',
  'tabulate>=0.10.0',
  'urllib3>=2.7.0',
  'fastmcp>=3.4.2',
  "rich>=15.0.0",
]
##[project.optional-dependencies]
##dev = ["check-manifest"]
##test = ["coverage"]

# Examples listed include a pattern for specifying where the package tracks
# issues, where the source is hosted, where to say thanks to the package
# maintainers, and where to support the project financially. The key is
# what's used to render the link text on PyPI.
##[project.urls]  # Optional
##"Homepage" = "https://github.com/pypa/sampleproject"
##"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
##"Funding" = "https://donate.pypi.org"
##"Say Thanks!" = "http://saythanks.io/to/example"
##"Source" = "https://github.com/pypa/sampleproject/"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
##[project.scripts]  # Optional
# sample = "sample:main"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
##package-data = {"sample" = ["*.dat"]}

[dependency-groups]
dev = [
  "defusedxml>=0.7.1",
  "numpy>=1.24.0",
  "Pillow>=10.0.0",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pytest-xdist>=3.0.0",
  "ruff>=0.15.12",
  "pre-commit>=4.6.0",
  "detect-secrets>=1.5.0",
]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
ibmdiagrams = "ibmdiagrams.ibmscripts.ibmdiagrams:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # Pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "S",   # flake8-bandit (security checks)
  "T20", # flake8-print (prevent print statements in prod)
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # function call in default argument (FastAPI pattern)
  "SIM117", # nested with statements (needed for httpx websocket tests)
  "S101",   # allow assert in tests
  "S324",   # insecure hash function (md5 used for non-security purposes)
  "S603",   # subprocess without shell=True (intentional for running Python scripts)
  "SIM113", # enumerate suggestions (existing code pattern)
  "SIM115", # context manager suggestions (existing code pattern)
  "SIM108", # ternary operator suggestions (readability preference)
  "B007",   # unused loop variable (existing code pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "SIM117"] # allow asserts and nested with in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--verbose", "--strict-markers", "--tb=short"]

[tool.coverage.run]
source = ["src/ibmdiagrams"]
omit = ["*/tests/*", "*/test_*.py", "*/__pycache__/*", "*/site-packages/*"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
